<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_btm"
            android:layout_alignParentTop="true">

        <LinearLayout
                android:id="@+id/ll_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_add_recipe_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:text="@string/add_recipe_activity"
                    android:textColor="@color/tc_black"
                    android:textSize="30sp" />

            <TextView
                    android:id="@+id/tv_recipe_name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/recipe_name"
                    android:textColor="@color/tc_black"
                    android:textSize="15sp" />

            <EditText
                    android:id="@+id/et_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/hint_enter_recipe_name" />

            <TextView
                    android:id="@+id/tv_recipe_photo_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/recipe_photo"
                    android:textColor="@color/tc_black" />

            <ImageView
                    android:id="@+id/iv_add_recipe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/bg_grey"
                    android:src="@drawable/ic_photo_camera_black" />

            <TextView
                    android:id="@+id/tv_ingredients_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/add_recipe_ingredients"
                    android:textColor="@color/tc_black"
                    android:textSize="15sp" />

            <LinearLayout
                    android:id="@+id/ll_ingredients_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_ingredient"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical" />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_steps_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/steps"
                    android:textColor="@color/tc_black"
                    android:textSize="15sp" />

            <LinearLayout
                    android:id="@+id/ll_steps_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_steps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/ll_btm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/cancel"
                android:textSize="20sp" />

        <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/ok"
                android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>